[package]
name = "rocket-rooms"
version = "0.1.0"
authors = ["Jeb Rosen <jeb@jebrosen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core-preview = "0.3.0-alpha.19"
futures-util-preview = "0.3.0-alpha.19"
# default-features=false to avoid ctrl_c_shutdown in particular
rocket = { git="https://github.com/SergioBenitez/Rocket", branch="async", default-features = false }
tokio = "0.2.0-alpha.6"
dashmap = "2.0.1"