[package]
name = "rocket-rooms"
version = "0.1.0"
authors = ["John Smith"]
edition = "2018"
description = "Server-side server sent events rooms implementation"
repository = "https://github.com/githubaccount624/sse-rooms"
license = "MIT/Apache-2.0"
keywords = ["rocket", "sse", "server-sent-events", "rooms", "web", "server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.1"
futures-util = "0.3.1"
# default-features=false to avoid ctrl_c_shutdown in particular
rocket = { git="https://github.com/SergioBenitez/Rocket", branch="async", default-features = false }
tokio = { version = "0.2.0", features = ["macros", "stream"] }
futures = { version = "=0.3.1", features = ["async-await"] }
async-stream = "0.2.0"
pin-project-lite = "0.1.0"